test/ill-formed/0075_incomplete_struct_in_param.c
struct s;
void f (struct s a) {}
